# nixpkgs-prs-bot

./: Cargo.toml  README.md  cliff.toml  flake.nix
.github/workflows/: ci.yml
crates/fetch-prs/: Cargo.toml
crates/fetch-prs/src/: github.rs  lib.rs
crates/nixpkgs-prs/: Cargo.toml
crates/nixpkgs-prs/src/: main.rs
crates/post-bsky/: Cargo.toml
crates/post-bsky/src/: bsky.rs  lib.rs
crates/post-fedi/: Cargo.toml
crates/post-fedi/src/: fedi.rs  lib.rs
module/: default.nix
nix/: module.nix  package.nix  shell.nix
pkgs/bsky-cli/: package.nix
pkgs/bsky-post/: package.nix  script.sh
pkgs/fedi-post/: package.nix  script.sh
pkgs/nixpkgs-prs/: package.nix  script.sh
src/: bsky.rs  fedi.rs  github.rs  main.rs
