[package]
name = "fetch-prs"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/isabelroses/nixpkgs-prs-bot/tree/main/crates/fetch-prs"
edition.workspace = true

[dependencies]
reqwest = { version = "0.12.14", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lints]
workspace = true
