[package]
name = "fetch-prs"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/isabelroses/nixpkgs-prs-bot/tree/main/crates/fetch-prs"
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"

[lints]
workspace = true
