[package]
name = "nixpkgs-prs"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/isabelroses/nixpkgs-prs-bot/tree/main/crates/nixpkgs-prs"
edition.workspace = true

[dependencies]
chrono.workspace = true
reqwest.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.1", default-features = false }
fetch-prs = { path = "../fetch-prs" }
post-bsky = { path = "../post-bsky", optional = true }
post-fedi = { path = "../post-fedi", optional = true }

[features]
default = ["post-bsky", "post-fedi"]
post-bsky = ["dep:post-bsky"]
post-fedi = ["dep:post-fedi"]

[lints]
workspace = true
