[package]
name = "post-bsky"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/isabelroses/nixpkgs-prs-bot/tree/main/crates/post-bsky"
edition.workspace = true

[dependencies]
fetch-prs = { path = "../fetch-prs" }
chrono = "0.4.40"
reqwest = { version = "0.12.14", features = ["json"] }
bsky-sdk = "0.1.16"
ipld-core = "0.4.2"
