[package]
name = "post-bsky"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/isabelroses/nixpkgs-prs-bot/tree/main/crates/post-bsky"
edition.workspace = true
publish = false

[dependencies]
fetch-prs = { path = "../fetch-prs" }
reqwest.workspace = true
chrono.workspace = true
bsky-sdk = { version = "0.1.16", default-features = false, features = [ "default-client" ] }
ipld-core = "0.4.2"
