[package]
name = "post-fedi"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
homepage = "https://github.com/isabelroses/nixpkgs-prs-bot/tree/main/crates/post-fedi"
edition.workspace = true

[dependencies]
fetch-prs = { path = "../fetch-prs" }
chrono = "0.4.40"
reqwest = { version = "0.12.14", default-features = false }
megalodon ="1.0.0"
